--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,14 @@ div {
     right: 100vw;
     transform: translateX(0vh);
     z-index: 1;
+
+    a {
+        transition: all 0.25s ease-in-out;
+
+        &:hover {
+            color: #FFFFAE;
+        }
+    }
 }
 .nav-item {
     border-bottom: white 2.5px solid;
@@ -70,6 +78,17 @@ div {
     background-size: contain;
     background-position: center;
 }
+.btn {
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #E6B363;
+    filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.322));
+    transition: all 0.15s ease-in-out;
+
+    &:hover {
+        background-color: #E69517;
+    }
+}
 
 /* home flex ------------------------------------------------------------------------- */
 .home-flex {
@@ -81,7 +100,7 @@ div {
 }
 .wordmark {
     width: 100%;
-    height: 15%;
+    height: 300px;
     margin-bottom: 15px;
     background: url(../images/pieces_wordmark.png);
     background-position: center;
@@ -89,7 +108,52 @@ div {
     background-repeat: no-repeat;
 }
 .paragraph-image {
+    justify-content: space-between;
     margin-bottom: 5px;
+    
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
+}
+.home-image1 {
+    height: 300px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    display: inline-block;
+    background: url(../images/1.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.home-image2 {
+    height: 300px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    display: inline-block;
+    background: url(../images/2.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.home-image3 {
+    height: 300px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    display: inline-block;
+    background: url(../images/3.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.home-image4 {
+    height: 300px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    display: inline-block;
+    background: url(../images/4.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /* shop ----------------------------------------------------------------------------- */
@@ -364,12 +428,16 @@ h3 {
 p {
     font-size: 1.11em;
 }
-.paragraph-image p {
+.paragraph-image div {
     font-size: 1.11em;
     margin-bottom: 15px;
     margin-right: 2.5%;
 }
 
+
+p {
+    margin-bottom: 30px;
+}
 /* tablet ----------------------------------------------------------------------------------------------- */
 @media (min-width: 768px) {
     nav {
@@ -434,7 +502,7 @@ p {
     }
     .wordmark {
         width: 100%;
-        height: 20%;
+        height: 300px;
         margin-bottom: 15px;
         background: url(../images/pieces_wordmark.png);
         background-position: center;
@@ -442,6 +510,7 @@ p {
         background-repeat: no-repeat;
     }
     .paragraph-image {
+        justify-content: space-between;
         width: 100%;
         height: 20%;
         display: flex;
@@ -449,7 +518,7 @@ p {
     }
     .home-image1 {
         height: 300px;
-        width: 20%;
+        width: 50%;
         border-radius: 5px;
         display: inline-block;
         background: url(../images/1.jpg);
@@ -459,7 +528,7 @@ p {
     }
     .home-image2 {
         height: 300px;
-        width: 20%;
+        width: 50%;
         border-radius: 5px;
         display: inline-block;
         background: url(../images/2.jpg);
@@ -469,7 +538,7 @@ p {
     }
     .home-image3 {
         height: 300px;
-        width: 20%;
+        width: 50%;
         border-radius: 5px;
         display: inline-block;
         background: url(../images/3.jpg);
@@ -479,7 +548,7 @@ p {
     }
     .home-image4 {
         height: 300px;
-        width: 20%;
+        width: 50%;
         border-radius: 5px;
         display: inline-block;
         background: url(../images/4.jpg);
@@ -718,11 +787,15 @@ p {
     p {
         font-size: 1.11em;
     }
-    .paragraph-image p {
-        max-width: 77.5%;
+    .paragraph-image div {
+        width: 50%;
         font-size: 1.11em;
         margin-bottom: 15px;
         margin-right: 2.5%;
+
+        p {
+            margin-bottom: 30px;
+        }
     }
 }
 
@@ -791,7 +864,7 @@ p {
     }
     .wordmark {
         width: 100%;
-        height: 20%;
+        height: 300px;
         margin-bottom: 15px;
         background: url(../images/pieces_wordmark.png);
         background-position: center;
@@ -799,6 +872,7 @@ p {
         background-repeat: no-repeat;
     }
     .paragraph-image {
+        justify-content: space-between;
         width: 100%;
         height: 20%;
         display: flex;
@@ -816,9 +890,8 @@ p {
     }
     .home-image2 {
         height: 300px;
-        width: 20%;
+        width: 50%;
         border-radius: 5px;
-        display: none;
         background: url(../images/2.jpg);
         background-position: center;
         background-size: cover;
@@ -826,9 +899,8 @@ p {
     }
     .home-image3 {
         height: 300px;
-        width: 20%;
+        width: 50%;
         border-radius: 5px;
-        display: none;
         background: url(../images/3.jpg);
         background-position: center;
         background-size: cover;
@@ -836,9 +908,8 @@ p {
     }
     .home-image4 {
         height: 300px;
-        width: 20%;
+        width: 50%;
         border-radius: 5px;
-        display: none;
         background: url(../images/4.jpg);
         background-position: center;
         background-size: cover;
@@ -1024,10 +1095,14 @@ p {
     p {
         font-size: 1.11em;
     }
-    .paragraph-image p {
-        max-width: 50%;
+    .paragraph-image div {
+        width: 50%;
         font-size: 1.11em;
         margin-bottom: 15px;
         margin-right: 2.5%;
+
+        p {
+            margin-bottom: 30px;
+        }
     }
 }
