--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,15 @@ div {
 }
 .product-description {
     width: 50%;
+    padding: 10px 20px;
     margin-bottom: 6%;
-    background: rgba(0, 0, 0, 0.404);
-    filter: drop-shadow(0.75rem 0.75rem 0.75rem #000);
+    border-radius: 30px;
+    background-color: white;
+    color: black;
+
+    .btn {
+        display: inline-block;
+    }
 }
 .product:nth-of-type(1) {
     background: url(../images/classic.jpg);
@@ -203,6 +209,10 @@ div {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    h2 {
+        text-align: center;
+    }
 }
 /* puzzle page ------------------------------------------------------ */
 .puzzlepage-flex {
@@ -426,6 +436,7 @@ h3 {
     margin-bottom: 5px;
 }
 p {
+    margin-bottom: 10px;
     font-size: 1.11em;
 }
 .paragraph-image div {
@@ -434,10 +445,6 @@ p {
     margin-right: 2.5%;
 }
 
-
-p {
-    margin-bottom: 30px;
-}
 /* tablet ----------------------------------------------------------------------------------------------- */
 @media (min-width: 768px) {
     nav {
