--- a/css/style.css
+++ b/css/style.css
@@ -243,17 +243,25 @@ div {
         grid-template-columns: 6.25vh 6.25vh 6.25vh 6.25vh 6.25vh 6.25vh 6.25vh 6.25vh;
         grid-template-rows: 6.25vh;
 
-        &:nth-of-type(odd) {
-            div:nth-of-type(odd) {
-                background-color: #A06535;
+        &:nth-of-type(2) {
+            div::after {
+                content: "";
+                margin: 5px;
+                background-image: url("../svg/pawn.svg");
+                filter: invert();
             }
-            div:nth-of-type(even) {
-                background-color: #FFFFAE;
+        }
+        &:nth-of-type(7) {
+            div::after {
+                content: "";
+                margin: 5px;
+                background-image: url("../svg/pawn.svg");
             }
         }
 
         div {
             position: relative;
+            cursor: grab;
 
             p {
                 position: absolute;
@@ -262,11 +270,20 @@ div {
                 color: rgb(44, 44, 44);
             }
         }
+
         div:nth-of-type(even) {
             background-color: #A06535;
         }
         div:nth-of-type(odd) {
             background-color: #FFFFAE;
+        }
+        &:nth-of-type(odd) {
+            div:nth-of-type(odd) {
+                background-color: #A06535;
+            }
+            div:nth-of-type(even) {
+                background-color: #FFFFAE;
+            }
         }
     }
 }
@@ -644,32 +661,6 @@ p {
             display: grid;
             grid-template-columns: 7.5vh 7.5vh 7.5vh 7.5vh 7.5vh 7.5vh 7.5vh 7.5vh;
             grid-template-rows: 7.5vh;
-    
-            &:nth-of-type(odd) {
-                div:nth-of-type(odd) {
-                    background-color: #A06535;
-                }
-                div:nth-of-type(even) {
-                    background-color: #FFFFAE;
-                }
-            }
-    
-            div {
-                position: relative;
-
-                p {
-                    position: absolute;
-                    bottom: 0.5vh;
-                    right: 1vh;
-                    color: rgb(44, 44, 44);
-                }
-            }
-            div:nth-of-type(even) {
-                background-color: #A06535;
-            }
-            div:nth-of-type(odd) {
-                background-color: #FFFFAE;
-            }
         }
     }
 
@@ -1034,32 +1025,6 @@ p {
             display: grid;
             grid-template-columns: 9.375vh 9.375vh 9.375vh 9.375vh 9.375vh 9.375vh 9.375vh 9.375vh;
             grid-template-rows: 9.375vh;
-
-            &:nth-of-type(odd) {
-                div:nth-of-type(odd) {
-                    background-color: #A06535;
-                }
-                div:nth-of-type(even) {
-                    background-color: #FFFFAE;
-                }
-            }
-
-            div {
-                position: relative;
-
-                p {
-                    position: absolute;
-                    bottom: 0.5vh;
-                    right: 1vh;
-                    color: rgb(44, 44, 44);
-                }
-            }
-            div:nth-of-type(even) {
-                background-color: #A06535;
-            }
-            div:nth-of-type(odd) {
-                background-color: #FFFFAE;
-            }
         }
     }
 
